--- a/avatar-ai-app/package.json
+++ b/avatar-ai-app/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@hookform/resolvers": "^5.2.1",
+    "axios": "^1.11.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "next": "^14.2.5",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
