--- a/avatar-ai-app/package.json
+++ b/avatar-ai-app/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.17.2",
     "next": "^14.2.5",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
