--- a/avatar-ai-app/package.json
+++ b/avatar-ai-app/package.json
@@ -21,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "archiver": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
